--- a/minutes/2022-11-29.md
+++ b/minutes/2022-11-29.md
@@ -11,9 +11,18 @@ Sync meeting for contributors to the workstream 3 - API specification.
 
 ## Attendees
 
+* Erich Barnstedt (Microsoft)
+* Noah Miller (Advanced Infrastructure)
+* Pierre Segonne (Electricity Maps)
+
 ## Minutes
 
+We spent the hour peer-coding to get the prototype implementing the spec going.
+
 ## Action items
+
+* Push initial code to the [draft branch](https://github.com/carbon-data-specification/Power-Systems-Data/tree/draft-api-0.0.1) (Erich)
+* Keep developing the POC (Erich)
 
 # CDSC WG2 (Power Data) Meeting 2022-11-29
 
@@ -27,6 +36,26 @@ Sync meeting for the whole working group.
 
 ## Attendees
 
+* Aynsley Kretschmar (Meta)
+* Erich Barnstedt (Microsoft)
+* Noah Miller (Advanced Infrastructure)
+* Pierre Segonne (Electricity Maps) (Maintainer)
+* Stephen Suffian (WattCarbon)
+
 ## Minutes
 
+* News on the CLA
+  * The automatic CLA signing is still not ready, but should be soon.
+  * In the meanwhile, individual contributors can reach out to John Mertic (jmertic@linuxfoundation.org) and Jory Burson (jburson@linuxfoundation.org) from the Linux Foundation to sign the CLA.
+
+* Status of Workstream 3
+  * See above for the minutes of the sync meeting.
+
+* Final version of the data types
+  * The final version of data types will be integrated, with the requirement level, on the draft on GitHub and merged into the main branch as soon as Pierre has signed the CLA.
+  * The Google doc will keep the trace of the data types that were deemed not possible or unnecessary to implement.
+
 ## Action items
+
+* Merge draft 0.0.1 of the data types and topology spec on GitHub (Pierre)
+* Add mock data for some balancing area in the US to help prototype the API (Stephen)
