Add minutes from API sync meeting

--- a/minutes/2023-01-10.md
+++ b/minutes/2023-01-10.md
@@ -4,11 +4,27 @@ Sync meeting for the API spec demonstrator
 
 ## Agenda
 
+* Review the proposal for introducing the topology specification into the demonstrator
+
 ## Attendees
+
+* Erich Barnstedt (Microsoft)
+* Noah Miller (Advanced Infrastructure)
+* Pierre Segonne (Electricity Maps) (Maintainer)
+* Stephen Suffian (WattCarbon)
 
 ## Minutes
 
+* Started off by explaining the motivation for the change. The idea is that customers of that data will want to request grid data for a certain granularity of the grid. Ex: A customer might want production data from production units and from the whole grid. As the underlying data has a similar structure for all levels of the grid, we reorganise the logic around the idea of `gridNode` which can be e.g. a balancing area or e.g. a production unit. The definition of types of grid nodes should follow the [topology specification](https://github.com/carbon-data-specification/Power-Systems-Data/blob/draft-0.0.1/topology.md).
+* Discussion around how to specify the IDs of the nodes. Agreed that we should encourage those implementing the spec to respect human readable formats https://www.w3.org/XML/2007/04/hrri/draft-walsh-tobin-hrri-01c.html https://github.com/Azure/opendigitaltwins-dtdl/blob/master/DTDL/v2/dtdlv2.md#internationalized-resource-identifier
+* Addition of all contributors to the repo and merging the first PR
+* Discussion around next steps
+
 ## Actions items
+
+* Reflect on how to organise the routes? Should the logic be to start by specifying the gridNode, e.g. `gridNode/US-CAL-CISO/generation` or by specifying the type of data, e.g. `generation/US-CAL-CISO`? We will decide in our next sync
+* Set a date for next sync (Pierre)
+* Try integrating the ENTSO-E/EIA real data into the demonstrator (Stephen)
 
 ___
 
