Add minutes from API sync meeting

--- a/minutes/2023-01-10.md
+++ b/minutes/2023-01-10.md
@@ -24,7 +24,8 @@ Sync meeting for the API spec demonstrator
 
 * Reflect on how to organise the routes? Should the logic be to start by specifying the gridNode, e.g. `gridNode/US-CAL-CISO/generation` or by specifying the type of data, e.g. `generation/US-CAL-CISO`? We will decide in our next sync
 * Set a date for next sync (Pierre)
-* Try integrating the ENTSO-E/EIA real data into the demonstrator (Stephen)
+* Try integrating the ENTSO-E/EIA real data into the demonstrator (Stephen). The collected data has been gathered here: https://drive.google.com/drive/u/0/folders/1K2k6ZJTwr8nTxH7VE4IAAY_o_mJKra2G
+* Add ELEXON data to the collected data (Noah)
 
 ___
 
