Add minutes from WG sync meeting

--- a/minutes/2023-01-10.md
+++ b/minutes/2023-01-10.md
@@ -39,8 +39,26 @@ Sync meeting for the whole working group.
 
 ## Attendees
 
+* Greg Sztupkay (Apple)
+* Henry Richardson (WattTime)
+* Jordan Hughes (Apple)
+* Kristina Stanford (Apple)
+* Noah Miller (Advanced Infrastructure)
+* Pierre Segonne (Electricity Maps) (Maintainer)
+* Robert Redlinger (Apple)
+* Stephen Suffian (WattCarbon)
 
 ## Minutes
 
+* Upcoming milestones:
+  * Demonstration of the API specification with real data is expected in the end of February
+  * Further milestones are not 100% clear, upcoming steering committee should clarify this
+* Use cases on the website
+  * We want to display use cases for the specification on the website to increase engagement and transparency
+  * A first proposal was submitted in December and still awaits a review. The PR is found [here](https://github.com/carbon-data-specification/Power-Systems-Data/pull/48)
+* Work on the API has resumed. See above for meetings notes.
 
 ## Action items
+
+* Update working group on further deliverables / milestones (Pierre)
+* Review the use cases on the website (Henry)
