--- a/minutes/2023-01-24.md
+++ b/minutes/2023-01-24.md
@@ -16,11 +16,12 @@ Sync meeting for the API spec demonstrator
 
 ## Minutes
 
-*
+* Accepted Noah's proposition for routing. Type of data will come first.
+* Planned for how to integrate real data in the demonstrator.
 
 ## Actions items
 
-*
+* Stephen will attempt to connect real world EIA data.
 
 ___
 
@@ -32,12 +33,22 @@ Sync meeting for the whole working group.
 
 ## Attendees
 
-*
+* Noah Miller (Advanced Infrastructure)
+* Kristina Stanford (Apple)
+* Andre Bernal Garcia
+* Aynsley Krestchmar (Meta)
+* Stephen Suffian (Watt Carbon)
+* Ben Gerber (M-RETS)
 
 ## Minutes
 
-*
+* Use cases for website:
+
+Kristina - Suggested another use case around renewable investments, will write up a paragraph and add to PR or send to Henry
+Stephen - Carbon accounting - should this be a use case mentioned as in the future, even if not the primary use case. Will add comment to PR.
+Want to get Henry's input before merging.
 
 ## Action items
 
-*
+* Ben - LF Energy Summit, want to build attendance.
+* MISO thinking of providing data. Try to get MISO involved in the calls. Reach out to Pierre/Noah to arrange.
