Fixed company affiliation in minutes

--- a/minutes/2023-08-08.md
+++ b/minutes/2023-08-08.md
@@ -2,7 +2,7 @@ Attendees
 -------------
 - Stephen Suffian (WattCarbon) (Maintainer)
 - Shankho Gosh (Advanced Infrastructure)
-- Pierre Vogler-Finck (Pierre V-F)
+- Pierre Vogler-Finck (PierreVF Consulting)
 - Henry Richardson (WattTime)
 - André Bernal Garcia (External Collaborator)
 
