--- a/minutes/2023-09-19.md
+++ b/minutes/2023-09-19.md
@@ -1,7 +1,7 @@
 ## Attendees
 
 -   Stephen Suffian (WattCarbon) (Maintainer)
--   Pierre Vogler-Finck (Pierre V-F)
+-   Pierre Vogler-Finck (PierreVF Consulting)
 -   Henry Richardson (WattTime)
 -   André Bernal Garcia (External Collaborator)
 -   Kristina Stanford (Apple)
